saved jobs fetch and delete functionality and specs added
